# eggviz

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain  webpack.config.js
.github/workflows/: ci.yml  pages.yml
js/: index.js
project-proposal/: proposal.bib  proposal.tex
project-report/: report.bib  report.tex
src/: language.rs  lib.rs  lispylang.rs  parser.rs  program.rs  scheduler.rs
static/: index.html
